chore: upgrade gradle version

--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,13 @@
 # Ignore Gradle project-specific cache directory
-.gradle
+.gradle/
+build/
 
-# Ignore Gradle build output directory
-build
+### IntelliJ IDEA ###
+.idea/
+*.iws
+*.iml
+*.ipr
+out/
+
+### VS Code ###
+.vscode/
