--- a/build.gradle
+++ b/build.gradle
@@ -2,6 +2,11 @@ plugins {
     id 'application'
 }
 
+group = 'io.github.sandersgutierrez.resume'
+version = '0.0.1-SNAPSHOT'
+sourceCompatibility = 17
+targetCompatibility = 17
+
 repositories {
     mavenCentral()
 }
