--- a/build.gradle
+++ b/build.gradle
@@ -1,5 +1,8 @@
 plugins {
-    id 'application'
+    id 'io.spring.dependency-management' version '1.1.0'
+    id 'org.springframework.boot' version '3.0.5'
+    id 'java'
+    id 'jacoco'
 }
 
 group = 'io.github.sandersgutierrez.resume'
@@ -12,15 +15,18 @@ repositories {
 }
 
 dependencies {
-    testImplementation 'org.junit.jupiter:junit-jupiter:5.9.0'
-    testImplementation 'org.mockito:mockito-core:4.8.0'
-    implementation 'com.google.guava:guava:31.1-jre'
-}
+    implementation 'org.springframework.boot:spring-boot-starter-web'
 
-application {
-    mainClass = 'com.sandersgutierrez.resumeapi.ResumeApplication'
+    testImplementation('org.springframework.boot:spring-boot-starter-test') {
+        exclude group: 'org.junit.vintage', module: 'junit-vintage-engine'
+    }
 }
 
 test {
     useJUnitPlatform()
+    finalizedBy jacocoTestReport
+}
+
+jacocoTestReport {
+    dependsOn test
 }
