fix: fixed greeting tests
Signed-off-by: Sanders Gutiérrez <ing.sanders@gmail.com>

--- a/build.gradle
+++ b/build.gradle
@@ -29,4 +29,18 @@ test {
 
 jacocoTestReport {
     dependsOn test
+    finalizedBy jacocoTestCoverageVerification
+}
+
+jacocoTestCoverageVerification {
+    dependsOn jacocoTestReport
+
+    violationRules {
+        rule {
+            enabled = true
+            limit {
+                minimum = 0.85
+            }
+        }
+    }
 }
