chore: change rules pipeline CI
Signed-off-by: Sanders Gutiérrez <ing.sanders@gmail.com>

--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -1,6 +1,10 @@
 name: Java CI with Gradle
 
 on:
+  push:
+    branches: [main]
+  pull_requests:
+    branches: [main]
   workflow_dispatch:
 
 permissions:
