--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -23,4 +23,4 @@ jobs:
         with:
           gradle-version: 8.1
       - name: Run tests with coverage with Gradle Wrapper
-        run: ./gradlew :jacocoTestCoverageVerification
+        run: ./gradlew :jacocoTestCoverageVerification :generateJacocoBadge
