--- a/build.gradle
+++ b/build.gradle
@@ -3,6 +3,7 @@ plugins {
     id 'org.springframework.boot' version '3.0.5'
     id 'java'
     id 'jacoco'
+    id 'com.github.dawnwords.jacoco.badge' version '0.2.4'
 }
 
 group = 'io.github.sandersgutierrez.resume'
@@ -30,6 +31,11 @@ test {
 jacocoTestReport {
     dependsOn test
     finalizedBy jacocoTestCoverageVerification
+
+    reports {
+        xml.required = true
+        html.required = true
+    }
 }
 
 jacocoTestCoverageVerification {
@@ -43,4 +49,9 @@ jacocoTestCoverageVerification {
             }
         }
     }
+}
+
+jacocoBadgeGenSetting {
+    readmePath "$projectDir/README.md"
+    limit = ['instruction': 0, 'branch': 0, 'line': 0, 'method': 0, 'class': 0]
 }
