--- a/build.gradle
+++ b/build.gradle
@@ -1,26 +1,43 @@
+buildscript {
+    ext {
+        springBootVer = '3.2.0'
+        springDepManVer = '1.1.4'
+    }
+}
+
 plugins {
-    id 'io.spring.dependency-management' version '1.1.0'
-    id 'org.springframework.boot' version '3.0.5'
-    id 'java'
+    id 'application'
     id 'jacoco'
+    id 'io.spring.dependency-management' version "${springDepManVer}"
+    id 'org.springframework.boot' version "${springBootVer}"
     id 'com.github.dawnwords.jacoco.badge' version '0.2.4'
 }
 
 group = 'io.github.sandersgutierrez.resume'
 version = '0.0.1-SNAPSHOT'
-sourceCompatibility = 17
-targetCompatibility = 17
+sourceCompatibility = JavaVersion.VERSION_17
+targetCompatibility = JavaVersion.VERSION_17
 
 repositories {
     mavenCentral()
 }
 
 dependencies {
-    implementation 'org.springframework.boot:spring-boot-starter-web'
+    // Development
+    developmentOnly 'org.springframework.boot:spring-boot-devtools'
 
+    // Production
+    implementation 'org.springframework.boot:spring-boot-starter-web'
+    implementation 'org.springframework.boot:spring-boot-starter-actuator'
+
+    // Test
     testImplementation('org.springframework.boot:spring-boot-starter-test') {
         exclude group: 'org.junit.vintage', module: 'junit-vintage-engine'
     }
+}
+
+application {
+    mainClassName = 'io.github.sandersgutierrez.resume.ResumeApplication'
 }
 
 test {
@@ -53,5 +70,5 @@ jacocoTestCoverageVerification {
 
 jacocoBadgeGenSetting {
     readmePath "$projectDir/README.md"
-    limit = ['instruction': 0, 'branch': 0, 'complexity': 0, 'line': 0, 'method': 0, 'class': 0]
+    limit = ['instruction': 0, 'complexity': 0, 'line': 0, 'method': 0, 'class': 0]
 }
