--- a/.editorconfig
+++ b/.editorconfig
@@ -11,6 +11,6 @@ max_line_length = 120
 indent_size = 4
 trim_trailing_whitespace = true
 
-[*.{md,yml}]
+[*.{md,yaml,yml}]
 indent_size = 2
 max_line_length = off
