--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -7,6 +7,21 @@ server:
     min-response-size: 1024
 
 spring:
+  profiles:
+    active: h2,dev
   web:
     resources:
       add-mappings: false
+  sql:
+    init:
+      # schema-locations: classpath*:db/${database}/schema.sql
+      data-locations: classpath*:db/${database}/data.sql
+  jpa:
+    open-in-view: false
+
+database: h2
+
+logging:
+  level:
+    org:
+      springframework: INFO
