--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,4 +1,5 @@
 server:
+  port: ${PORT:8080}
   servlet:
     context-path: /api
   compression:
@@ -14,7 +15,7 @@ spring:
       add-mappings: false
   sql:
     init:
-      # schema-locations: classpath*:db/${database}/schema.sql
+      schema-locations: classpath*:db/${database}/schema.sql
       data-locations: classpath*:db/${database}/data.sql
   jpa:
     open-in-view: false
